# datazen

./: .gitignore  .gitmodules  .isort.cfg  .pylintrc  Makefile  README.md  dev_requirements.txt  manifest.yaml  mypy.ini  pyproject.toml  requirements.txt  setup.py  upload.mk
.github/workflows/: python-package.yml
configs/: package.yaml
configs_local/: package.yaml
datazen/: __init__.py  __main__.py  app.py  compile.py  configs.py  dev_requirements.txt  entry.py  fingerprinting.py  load.py  parsing.py  paths.py  performance.py  requirements.txt  schemas.py  targets.py  templates.py  variables.py
datazen/archive/: __init__.py
datazen/classes/: base_environment.py  command_environment.py  compile_environment.py  config_environment.py  data_repository.py  environment.py  environment_namespace.py  file_info_cache.py  group_environment.py  manifest_cache_environment.py  manifest_environment.py  render_environment.py  schema_environment.py  target_resolver.py  task_data_cache.py  task_environment.py  template_environment.py  valid_dict.py  variable_environment.py
datazen/code/: __init__.py  cache.py  decode.py  encode.py  types.py
datazen/commands/: compile.py  render.py
datazen/data/schema_types/: deps.yaml  paths.yaml
datazen/data/schemas/: manifest.yaml
datazen/enums/: __init__.py
datazen/environment/: __init__.py  base.py  command.py  compile.py  config.py  group.py  integrated.py  manifest.py  manifest_cache.py  render.py  schema.py  task.py  template.py  variable.py
local/configs/: package.yaml  python.yaml  schema.yaml  schema_types.yaml
local/templates/: README.md.j2  manifest.yaml.j2
local/variables/: package.yaml
mk/: upload.mk
requirements/: dev_requirements.txt
tasks/: conf.py
templates/: README.md.j2  __init__.py.j2  setup.py.j2
tests/: __init__.py  environment.py  resources.py  test_configs.py  test_entry.py  test_load.py  test_parsing.py  test_paths.py  test_schemas.py  test_targets.py  test_templates.py  test_variables.py
tests/archive/: test_extractall.py  test_make_archive.py
tests/classes/: test_command_environment.py  test_compile_environment.py  test_data_repository.py  test_environment.py  test_file_info_cache.py  test_render_environment.py
tests/code/: test_arbiter.py  test_cache.py  test_ini.py  test_types.py
tests/commands/: test_compile.py  test_render.py
tests/data/invalid/configs/: a.yaml
tests/data/invalid/manifests/: bad_include.yaml  invalid.yaml  test.yaml  valid.yaml
tests/data/invalid/schemas/: a.yaml
tests/data/invalid/templates/: bad.j2
tests/data/invalid/variables/: bad.json  bad.yaml
tests/data/scenarios/test_ini/: manifest.yaml
tests/data/valid/: manifest.yaml
tests/data/valid/b_out/: b.json
tests/data/valid/configs/: .json  .yaml  a.yaml  b.yaml  c.yaml  d.json  e.json  f.json
tests/data/valid/configs2/: .json  .yaml  custom.yaml
tests/data/valid/configs3/: .yaml
tests/data/valid/configs_missing_vars/: z.yaml
tests/data/valid/custom_schemas/: custom.yaml
tests/data/valid/datazen-out/: a.yaml
tests/data/valid/datazen-out-test/: a  a.yaml  a_render  b.yaml  b_cool  c.yaml  child.html  comp1-a.yaml  comp1-b.yaml  comp2-c.yaml  comp2-e.yaml  comp3-a.yaml  comp3-b.yaml  f.yaml  render2  test-child-delim  test-children  test.md  test.py  z.yaml
tests/data/valid/includes/: renders.yaml
tests/environment/: __init__.py  test_command.py  test_compile.py  test_integrated.py  test_render.py
(+31 files in other folders)
